--- a/wp-content/themes/im2018/sass/navigation/_menus.scss
+++ b/wp-content/themes/im2018/sass/navigation/_menus.scss
@@ -333,6 +333,7 @@
 	}
     
     border-color: transparent;
+    z-index: 100;
     
     align-items: flex-end;
   
